tg-352 favicon, header y nombre de webapp y backoffice

--- a/front-end/webapp/src/app/modules/core/components/bar/bar.component.html
+++ b/front-end/webapp/src/app/modules/core/components/bar/bar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar>
 	<mat-toolbar-row class="mat-elevation-z6">
-		<ng-content></ng-content>
-		<h1 [translate]="'app.header.TITLE'"></h1>
+		<img src="assets/images/ministerio-salud.png">
 	</mat-toolbar-row>
 </mat-toolbar>
