tg-352 add footer logo unicen

--- a/front-end/webapp/src/app/app.component.html
+++ b/front-end/webapp/src/app/app.component.html
@@ -1,11 +1,14 @@
 <div class="app mat-typography mat-app-background">
 	<app-bar></app-bar>
-	<ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
-		<app-sidenav [menuItems]="menuItems" >
-			<router-outlet></router-outlet>
-		</app-sidenav>
-	</ng-container>
-	<ng-template #loading>
-		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
-	</ng-template>
+	<div class="content">
+		<ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
+			<app-sidenav [menuItems]="menuItems" >
+				<router-outlet></router-outlet>
+			</app-sidenav>
+		</ng-container>
+		<ng-template #loading>
+			<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+		</ng-template>
+	</div>
+	<app-footer></app-footer>
 </div>
