--- a/front-end/webapp/src/app/app.component.scss
+++ b/front-end/webapp/src/app/app.component.scss
@@ -1,3 +1,10 @@
 .app {
 	padding: 0;
+	display: flex;
+	flex-direction: column;
+	.content {
+		flex-grow: 1;
+	}
+	height: 100%;
+	// min-height: 100%;
 }
