--- a/front-end/webapp/src/app/modules/core/components/footer/footer.component.scss
+++ b/front-end/webapp/src/app/modules/core/components/footer/footer.component.scss
@@ -1,4 +1,10 @@
-
 .footer-container {
-
+	background-color: #404040;
+	display: flex;
+	justify-content: center;
+	padding: 25px 0;
+	img {
+		margin: 10px;
+		max-height: 60px;
+	}
 }
