tg-224 add mixin para headers con primary color cambia icono a outlined en info personal

--- a/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.html
@@ -2,8 +2,8 @@
 	<span class="noInformation">Sin Información</span>
 </ng-template>
 <div class="form-row">
-	<mat-icon color="primary">assignment_ind</mat-icon>
-	<h4 class="primary">Informacion Personal</h4>
+	<mat-icon color="primary" fontSet="material-icons-outlined">assignment_ind</mat-icon>
+	<h3 class="primary bold">Informacion Personal</h3>
 </div>
 <div class="form-row">
 	<div>
