--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -181,3 +181,12 @@ $default-color: 100;
 		background-color: white;
 	}
 }
+
+@mixin header($theme) {
+	$primary-palette: map-get($theme, primary);
+	h1, h2, h3, h4, h5, h6 {
+		&.primary {
+			color: mat-color($primary-palette, default);
+		}
+	}
+}
