--- a/front-end/webapp/src/assets/styles/theme.scss
+++ b/front-end/webapp/src/assets/styles/theme.scss
@@ -18,4 +18,5 @@ $theme: mat-light-theme($primary, $accent);
 @include mat-dialog($theme);
 @include mat-button($theme);
 @include no-data($theme);
-@include general($theme)
+@include general($theme);
+@include header($theme);
