tg-381. [BE] Eliminar diagnostico de ingreso en pdf de nota de evolución

--- a/back-end/hospital-api/src/main/resources/templates/evolutionnote.html
+++ b/back-end/hospital-api/src/main/resources/templates/evolutionnote.html
@@ -29,7 +29,7 @@
 	</div>
 	
 
-	<h3>Diagnóstico de ingreso</h3>
+	<h3>Diagnósticos</h3>
 	<div class="row" th:if="${#lists.isEmpty(diagnosis)}">
 		<dl class="lista" >
 			<dd><p >Sin cambios registrados</p></dd>
