tg-369 implementa snackbar para msg de error y exito al submittear forms

--- a/front-end/webapp/src/assets/styles/variables.scss
+++ b/front-end/webapp/src/assets/styles/variables.scss
@@ -4,3 +4,6 @@ $font-size-lg: 25px;
 $font-size-me: 20px;
 $font-size-sm: 15px;
 $font-size-xs: 11px;
+
+$error-color: #BD362F;
+$success-color: #51A351;
