tg-384 fix error consola card paciente resize avatar fix ver botones antes de terminar carga y que se bloqueen

--- a/front-end/webapp/src/app/modules/core/components/bar/bar.component.html
+++ b/front-end/webapp/src/app/modules/core/components/bar/bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
 	<mat-toolbar-row class="mat-elevation-z6">
-		<img src="assets/images/ministerio-salud.png">
+		<img src="assets/images/ministerio-salud.png" alt="Ministerio de salud - Presidencia de la nación">
 	</mat-toolbar-row>
 </mat-toolbar>
