--- a/front-end/webapp/src/app/modules/core/components/footer/footer.component.html
+++ b/front-end/webapp/src/app/modules/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="footer-container">
-	<img src="assets/images/logos/pladema.png">
-	<img src="assets/images/logos/unicen.png">
+	<img src="assets/images/logos/pladema.png" alt="pladema">
+	<img src="assets/images/logos/unicen.png" alt="unicen">
 </div>
