tg-386 [BE] Se agregan datos del profesional de salud en documentos de internacion

--- a/back-end/hospital-api/src/main/resources/templates/epicrisis.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis.html
@@ -124,4 +124,9 @@
         </div>
     </div>
 </body>
+<footer class="footer-dark" th:if="${author != null}">
+    <div th:replace="fragments/author.html
+	:: author(firstName=${author.firstName}, lastName=${author.lastName},licenseNumber=${author.licence})">
+    </div>
+</footer>
 </html>
