--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -4,6 +4,9 @@
 			<h2 class="page-title" [translate]="'internaciones.anamnesis.TITLE'"></h2>
 			<h3 [translate]="'internaciones.anamnesis.SUBTITLE'"></h3>
 		</section>
+		<section id="diagnostico-principal">
+			<app-diagnostico-principal [diagnosis]="mainDiagnosis" (onChange)="setMainDiagnosis($event)"></app-diagnostico-principal>
+		</section>
 		<section id="diagnosticos">
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
