--- a/back-end/hospital-api/src/main/resources/templates/anamnesis.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis.html
@@ -27,9 +27,21 @@
 		<strong>- Edad: </strong><label th:text="${patient.person.age}"></label><br/>
 		<strong>- Sexo: </strong><label  th:text="${patient.person.gender.description}"></label><br/>
 	</div>
-	
 
-	<h3>Diagnóstico de ingreso</h3>
+
+	<h3>Diagnóstico principal</h3>
+	<div class="row" th:if="${mainDiagnosis == null}">
+		<dl class="lista" >
+			<dd><p >Sin cambios registrados</p></dd>
+		</dl>
+	</div>
+	<div class="row" th:if="${mainDiagnosis != null}">
+		<dl>
+			<dd><p  th:text="${'-' + mainDiagnosis.snomed.pt}"></p></dd>
+		</dl>
+	</div>
+
+	<h3>Otros diagnósticos</h3>
 	<div class="row" th:if="${#lists.isEmpty(diagnosis)}">
 		<dl class="lista" >
 			<dd><p >Sin cambios registrados</p></dd>
