tg-427 add caja para diagnostico principal en ficha de internacion

--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -41,6 +41,9 @@
 						</app-summary-card>
 					</section>
 					<section>
+						<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"></app-main-diagnosis-summary>
+					</section>
+					<section>
 						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"></app-diagnosis-summary>
 					</section>
 				</div>
