--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../../assets/styles/variables";
 
 mat-card.mat-card {
-	min-height: 25vh;
+	min-height: 120px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
